# Parapper-ASR

./: .env.example  .gitignore  .prettierignore  .prototools  AGENTS.md  Cargo.toml  LICENSE  README.md  cspell.json  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
diagnostics/: Cargo.toml
diagnostics/src/: verify_jvs_asr_constants.rs
documents/: README.en.md  development-help.md  development.md  how-to-use.md  project-overview.md  troubleshooting.md
documents/architecture/: 01-src-overview.md  03-recognition-internals.md
documents/developer/: README.md  development-help.md  japanese_separate_rule.md  project-overview.md  security.md  streaming-recognition-protocol-v1.md  ync-neo-local-translation-server-check.html
documents/developer/architecture/: 01-src-overview.md  02-recognition-modules.md
documents/developer/example/: README.md
documents/developer/example/aiavatarkit/: README.md  aiavatar_chat.py  https_api_bridge.py  pyproject.toml  websocket_bridge.py
public/licenses/: .gitignore
scripts/: Cargo.toml  prepare-macos-runtime.sh
scripts/src/: lib.rs  utils.rs
src/: app.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  about.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: README.md  commands.rs  config.rs  config_preset.rs  error_event.rs  lib.rs  pipeline_tests.rs  processing.rs  smoke_server.rs  state.rs
src-tauri/src/audio/: device.rs  dispatch.rs  input.rs  loopback_permission.rs  mod.rs  noise_cancellation.rs  output.rs  resampler.rs  stream.rs
src-tauri/src/config/: asr.rs  mapping.rs  mod.rs  noise_cancellation.rs  preset.rs  send_timing.rs  settings.rs  turn.rs
src-tauri/src/connect/: mod.rs  osc.rs  registry.rs  test_support.rs  transport.rs
src-tauri/src/connect/ync/: client.rs  discovery.rs  mod.rs  protocol.rs  speech.rs  tests.rs  text_input.rs  translation.rs
src-tauri/src/delivery/: dispatch.rs  mod.rs  tests.rs  types.rs
src-tauri/src/delivery/common/: mapping.rs  mod.rs  text_format.rs  timing.rs
src-tauri/src/delivery/sinks/: developer_http.rs  mod.rs  recognized_text.rs  ui_event.rs  vrchat_mute.rs  ync_text.rs
src-tauri/src/model/: asr.rs  catalog.rs  manager.rs  mod.rs  onnx_runtime.rs  vad.rs
src-tauri/src/playback/: event.rs  manager.rs  mod.rs  queue.rs
src-tauri/src/recognition/: README.md  engine_cache.rs  events.rs  mod.rs  pipeline.rs  route.rs  segmenter.rs  sli.rs  worker.rs
src-tauri/src/recognition/control/: construction.rs  driver.rs  engine_cache.rs  events.rs  input.rs  input_source.rs  mod.rs  pending.rs  runtime_event.rs  session.rs
src-tauri/src/recognition/control/tests/: integration_test.rs  mod.rs  system_test.rs  test_util.rs  unit_test.rs
src-tauri/src/recognition/control/tests/unit_test/: asr_result.rs  asr_runner.rs  finalization.rs  grammar_boundary_decision.rs  request_dispatch.rs  route_selection.rs  turn_split.rs
src-tauri/src/recognition/engines/: asr.rs  language_id.rs  mod.rs  noise_cancellation.rs  turn_detector.rs  vad.rs
src-tauri/src/recognition/segment_builder/: buffer.rs  config.rs  facade.rs  tests.rs
src-tauri/src/recognition/segmentation/: flow.rs  mod.rs
src-tauri/src/recognition/segmentation/segment/builder/: buffer.rs  config.rs  facade.rs  mod.rs  tests.rs
src-tauri/src/recognition/segmentation/vad/: engine.rs
src-tauri/src/recognition/transcription/: flow.rs  handle.rs  job.rs  mod.rs  tests.rs
src-tauri/src/recognition/transcription/asr/: engine.rs  input.rs  mod.rs  port.rs  task.rs
src-tauri/src/recognition/transcription/planner/: mod.rs
src-tauri/src/recognition/transcription/reducer/: mod.rs
src-tauri/src/recognition/transcription/route/: mod.rs  types.rs
src-tauri/src/recognition/transcription/route/language_id/: engine.rs  mod.rs  port.rs
src-tauri/src/recognition/transcription/route/selection/: asr.rs  id.rs  mod.rs  turn.rs
src-tauri/src/recognition/transcription/worker_runtime/: decision.rs  mod.rs  output.rs  rerecognize.rs  route.rs  runtime.rs  tests.rs
src-tauri/src/recognition/turn/: boundary_flow.rs  flow.rs  mod.rs  output.rs  state.rs  tests.rs  transcript.rs
src-tauri/src/recognition/turn/boundary/: audio_window.rs  japanese.rs  mod.rs  tests.rs
src-tauri/src/recognition/turn/decision/: engine.rs  mod.rs  port.rs
src-tauri/src/recognition/turn/domain/: mod.rs  output.rs  state.rs  tests.rs
src-tauri/src/recognition/turn/policy/: completion.rs  grammar.rs  mod.rs  namo.rs  silence.rs  timeout.rs
src-tauri/src/recognition/turn/port/: mod.rs  output_sink.rs
src-tauri/src/streaming_recognition/: backend.rs  mod.rs  protocol.rs  server.rs
src-tauri/src/synthesis/: README.md  artifact.rs  manager.rs  mod.rs  provider.rs  queue.rs  request.rs
src-tauri/src/synthesis/clients/: mod.rs  ync_speech.rs
src-tauri/src/synthesis/engines/: mod.rs  sherpa_onnx.rs  supertonic_onnx.rs
src-tauri/src/synthesis/local/: audio.rs  engine.rs  key.rs  mod.rs  playback.rs  queue.rs
src-tauri/src/translation/: event.rs  manager.rs  mod.rs  provider.rs  queue.rs  request.rs
src-tauri/src/translation/clients/: mod.rs  ync_translate.rs
src-tauri/src/translation/local/: cache.rs  engine.rs  mod.rs  openai_adapter.rs  server.rs  service.rs  ync_adapter.rs
src-tauri/tests/: jvs_asr.rs
src/components/: onboarding-modal.tsx  recognition-log.tsx  runtime-panel.tsx  settings-panel.tsx  status-badges.tsx  translation-side-panel.tsx
src/components/settings/: asr-settings.tsx  connection-settings.tsx  license-settings.tsx  mapping-list.tsx  (+6 more)
src/hooks/: use-app-state.ts  use-asr-model-options.ts  use-config-state.ts  use-synced-log-row-heights.ts  use-voice-list.ts
src/i18n/: index.ts
src/lib/: audio-devices.ts  constants.ts  error.ts  layout-styles.ts  mapping-options.ts  mapping-row-utils.ts  platform.ts  recognition-log-csv.ts  recognition-source.ts  settings-options.ts  theme.ts  types.ts
(+12 files in other folders)
