[workspace]
resolver = "3"
members = [
  "src-tauri",
  "scripts",
]

[workspace.package]
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
tauri-build = { version = "=2.5.1", features = [] }
tauri = { version = "=2.9.1" }
tauri-plugin-dialog = "=2.4.2"
tauri-plugin-log = { version = "=2.7.1", features = ["colored"] }
log = "0.4"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[workspace.lints.clippy]
pedantic = "warn"
