[project]
name = "parapper-aiavatarkit-example"
version = "0.1.0"
description = "Minimal Parapper streaming recognition bridge for AIAvatarKit"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.10,<3",
    "sounddevice>=0.5,<1",
    "uvicorn>=0.34,<1",
    "websockets>=13,<14",
]
